--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,78 +1,218 @@
 
 /*
-Ревизия: 2018.01
+Ревизия: 2020.02
 */
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДЕНЬ #1#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ - ДЕНЬ #1#
 
-Поместье Марьи Моревны представляет собой дворец на холме, два гаража, вокруг сад, что-то типа рощицы. Дворец обнесён стеной.
-Слышится вопль и из рощицы вылетает вопящее тело, запущеное в воздух неведомой силой.
+Поместье Марьи Моревны представляет собой замок на холме. Вокруг замка растут деревья - что-то типа рощицы. Замок окружён стеной.
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА ДЕНЬ #2#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #2#
 
-АГЕНТ сидит в зарослях возле стены дома и с ужасом провожает взглядом пролетевшее по небу тело. Стена дома заминирована большим количеством взрывчатки. Агент стирает со лба пот и опускает глаза на шнур, тянующийся от взрывчатки. Дрожащими руками достаёт коробок спичек. Чиркает спичкой о коробок.
-В это время за его спиной откуда-то сверху на верёвке вниз головой свешивается Иван. Колыхание воздуха от этого движения тушит спичку. Но Агент не замечает Ивана сзади и достаёт новую. Иван с интересом наблюдает за его действиями. Дрожащими руками Агент подносит спичку к шнуру.
+СОЛДАТ сидит в зарослях возле стены дома. Рядом с ним стена дома заминирована большим количеством взрывчатки.
+
+СОЛДАТ
+(в рацию)
+"Сокол", "Сокол", говорит "Ястреб". Как слышите меня?
+
+Из рации слышится шипение и треск. Потом, сквозь шипение и треск из неё доносятся слышатся прерывистые крики.
+
+ГОЛОС ИЗ РАЦИИ
+(отчаянно и истерично)
+Эй, эй!!! Отпусти!... Нет!
+
+Слышится треск кустов и сучьев. Из-за деревьев, прямо в небо с воплем вылетает чьё-то тело, подброшенное в воздух неведомой силой. Тело улетает далеко за стену замка.
+Солдат с ужасом провожает взглядом пролетевшее по небу тело.
+
+СОЛДАТ
+(в рацию)
+База, база, это "Ястреб". Мы потеряли "Сокола".
+
+ГОЛОС ИЗ РАЦИИ 2
+Вас понял. Продолжайте операцию.
+
+СОЛДАТ
+Принято. Отбой.
+
+Солдат опускает рацию. Сплёвывает на землю.
+
+СОЛДАТ
+(зло)
+Чтоб тебя... А ничего, что я тут один остался?... Помотрел бы я на вас.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #3#
+
+Комната наблюдения, в ней царит полумрак. Посредине стоит стол с множеством мониторов. За столом спиной к нам сидит фигура - МАРЬЯ МОРЕВНА.
+На мониторах видны различные места в замке. На одном из мониторов показан Солдат, а на мониторе рядом видна зелёная звуковая волна, сверху которой стоит надпись "ПЕРЕХВАТ". Звуковая волна колыхается от голоса из штаба (с которым разговаривал Солдат).
+
+ГОЛОС ИЗ РАЦИИ 2
+(искажённо)
+Вас понял. Продолжайте операцию.
+
+МАРЬЯ МОРЕВНА
+(с грустной улыбкой, сама себе)
+"Продолжайте операцию"? Эх, ребятки...
+
+Моревна касается голосовой гарнитуры возле своего уха, чтобы включить голосовую связь.
+
+МАРЬЯ МОРЕВНА
+Там ещё один, возле северной стены. Не вооружён.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ #4#
+
+Где-то в поместье Моревны по коридоку стремительно бежит ИВАН.
 
 ИВАН
-Что забыл здесь, добрый молодец?
+(запыхавшись)
+Понял! Направляюсь туда!
 
-Агент от неожиданности кричит и вскакивает. Иван в это время отцепляется и становится ногами на землю.
-Агент выхватывает нож. Затем, подумав, другой рукой достаёт из нагрудного кармана удостоверение.
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #5#
 
-АГЕНТ
-Я правительственный агент!
+Солдат подходит к ящикам со взрывчаткой и дрожащими руками достаёт коробок спичек. Чиркает спичкой о коробок. Спичка загорается.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #6#
+
+МАРЬЯ МОРЕВНА
+Тебе придётся поторопиться! Он собирается поджечь шнур!
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ #7#
+
+ИВАН
+(на бегу)
+Вот как? Тогда мне придётся срезать.
+
+Не замедляя бега пристёгивает карабин к поясу.
+Иван выпрыгивает в окно.
+
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #8#
+
+Солдат подносит спичку к шнуру.
+В это время за его спиной откуда-то сверху на верёвке вниз головой свешивается Иван. Колыхание воздуха от этого движения тушит спичку.
+
+ИВАН
+Что-то забыл здесь, добрый молодец?
+
+Солдат от неожиданности кричит и вскакивает. Иван в это время отцепляется и становится ногами на землю.
+
+СОЛДАТ
+(в панике)
+ААААА! Не подходи, не подходи!
+
+Солдат выхватывает нож. 
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #9#
+
+Моревна вскакивает с кресла.
+
+МАРЬЯ МОРЕВНА
+Проклятье, у него нож!
+
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #10#
+
+Не опуская нож, Солдат достаёт другой рукой из нагрудного кармана удостоверение.
+
+СОЛДАТ
+Я - правительственный агент!
 
 ИВАН
 (устало)
-Знаю-знаю... А я – хозяин этого дома.
+Знаю-знаю... А я — хозяин этого дома.
 
 # ОТЪЕЗД МОРЕВНЫ
 
-.НАТ. ПОМЕСТЬЕ МОРЕВНЫ ДВОР ДЕНЬ #3#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ #11#
 
-Иван выходит из рощи, тащит Агента за ногу. На голове агента огромная шишка. Во второй руке Иван несёт огромную пачку взрывчатки, которой была заминирована стена. В самом центре двора стоит угрожающего вида катапульта. Агент отчаянно скребёт пальцами по земле, но Иван уверенно идёт шаг за шагом вперёд по направлению к катапульте. Из дверей дома выходит Марья Моревна.
+Иван выходит из рощи, тащит одной рукой за ногу Солдата. На голове Солдата огромная шишка. У Ивана под одним глазом синяк. Во второй руке Иван несёт ящик с инструментами.
+В самом центре двора стоит угрожающего вида катапульта. Солдат отчаянно скребёт пальцами по земле, но Иван уверенно идёт вперёд, шаг за шагом приближаясь к катапульте.
+Из дверей дома выходит Марья Моревна.
 
 ИВАН
 (не прекращая идти)
-Ах, Марья Моревна, вот чего я всё в толк не возьму - у нас что тут, мёдом намазано? Вроде и не так уж чтобы богато живём, а лезут они к нам и лезут! Экстремисты поганые!
+Ах, Марья Моревна, вот чего я всё в толк не возьму - у нас что тут, мёдом намазано? Вроде и не так уж богато живём, а лезут они к нам и лезут эти голубчики!
 
-Кладёт Агента на катапульту.
+Кладёт Солдата на катапульту.
+
+СОЛДАТ
+(очухивается)
+Я не голубчик, я - Ястреб.
 
 ИВАН
-...Будто других домов никаких нету!
+(солдату)
+Лети-лети, ястреб.
 
-Нажимает на спуск и катапульта выбрасывает вопящего Агента в воздух, далеко за стену поместья.
+Нажимает на спуск и катапульта выбрасывает вопящего Солдата в воздух, далеко за стену поместья.
 
 МАРЬЯ МОРЕВНА
-А то тебе не в радость развлечение.
+А то тебе не в радость развлечение!?
 
 ИВАН
-Ещё бы не в радость! Но скажи, зачем было сбрасывать на голову мой 32-х дюймовый монитор?
+Ещё бы не в радость! Но скажи, зачем было сбрасывать ему на голову мой ящик с инструментами?
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА ДЕНЬ ВОСПОМИНАНИЕ #4#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ВОСПОМИНАНИЕ - ДЕНЬ #12#
 
-Анимация в стиле чиби. Агент стоит с ножом и удостоверением напротив Ивана, а сверху из окна Марья Моревна выбрасывает на голову Агента монитор. Иван от неожиданности подскакивает и трясёт кулаками.
+Анимация в стиле чиби. Солдат стоит с ножом и удостоверением напротив Ивана, а сверху из окна Марья Моревна выбрасывает на голову Солдата ящик с инструментами.
+Ящик падает на голову Солдата, тот падает в отключке.
+Один из инструментов отлетает в сторону Ивана и попадает ему под глаз, оставив синяк.
+Иван яростно трясёт кулаками.
 
-.НАТ. ПОМЕСТЬЕ МОРЕВНЫ ДВОР ДЕНЬ #5#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ #13#
 
 МАРЬЯ МОРЕВНА
-(разводит руками)
-Ничего, продадим взрывчатку, купим тебе 33-х дюймовый.
+Он был с ножом, я испугалась за тебя и бросила тем, что подвернулось под руку.
 
 ИВАН
-Такими темпами я скоро торговлю тротилом смогу открыть! Интересно, когда они сообразят, что у нас тут веб-камеры везде расставлены?
+Да-да, этот - с ножом, предыдущий был с рогаткой и ты бросила в него пылесосом...
+
+МАРЬЯ МОРЕВНА
+(на фоне)
+Опасное оружие!
+
+ИВАН
+(продолжает)
+...А до этого был один с палкой и другой с теннисной ракеткой.
+
+Показывается изображение солдата, одетого в теннисные шорты и футболку. И то, и другое одето прямо поверх солдатской формы. Рядом с солдатом появляется стрелочка и надпись: "Переоделся теннисистом".
+
+ИВАН
+(загибает пальцы на руке)
+Утюг, бюст Ленина, пылесос... А теперь ещё и мой ящик с инструментами! Дорогая, если так пойдёт дальше, то мы останемся совсем без мебели и предметов первой необходимости! Сколько раз я могу тебя убеждать, что я в отличной физической форме и вполне способен нас защитить!
+
+МАРЬЯ МОРЕВНА
+(невинно разводит руками)
+Ну прости, прости...
+
+ИВАН
+И что ты им такого сделала, что они так хотят до тебя добраться?
+
+МАРЬЯ МОРЕВНА
+(пожимает плечами)
+Понятия не имею.
 
 Марья Моревна выводит мотоцикл из гаража.
 
+ИВАН
+(как будто только сейчас заметил мотоцикл)
+Куда-то собралась?
+
 МАРЬЯ МОРЕВНА
-Я собираюсь на слёт байкеров, это далеко, до завтра не вернусь.
+Я уезжаю на слёт байкеров. До завтра не вернусь. Ужин на плите, дрова в сарае, собачья еда под раковиной...
+
+ИВАН
+У нас что, ещё собаки есть?
+
+МАРЬЯ МОРЕВНА
+(продолжает)
+...если отключат свет — не забудь включить генератор и перезагрузить систему ПВО.
+
+Иван слушает всё это и кивает головой.
+
+МАРЬЯ МОРЕВНА
 (достаёт ключи)
 Вот тебе ключи от всех дверей в доме. Можешь ходить куда угодно, но вот этот ключ не трогай и дверь, которую он отпирает не открывай.
 
 ИВАН
-(берёт ключи)
 А почему?
 
 МАРЬЯ МОРЕВНА
@@ -86,27 +226,98 @@
 
 Садится на мотоцикл, уезжает. Иван машет вслед рукой.
 
-# ВОЗРОЖДЕНИЕ КОЩЕЯ
+# ИВАН В ЗАМКЕ
 
-.ИНТ. ПОМЕСТЬЕ МОРЕВНЫ КОМНАТА НОЧЬ #6#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #14#
 
-Иван сидит за компьютером. На экране компа виден рабочий стол ОС Fedora Castle. Рядом с Иваном стоит банка с каким‑то напитком. Иван берёт банку, чтобы сделать глоток, но оказывается что банка пуста. Иван вздыхает и встаёт из-за стола.
+Иван наливает из бутылки в бокал какую-то жидкость.
 
-.ИНТ. ПОМЕСТЬЕ МОРЕВНЫ КОРИДОР НОЧЬ #7#
+ИВАН
+Ну что, детка, тогда я, пожалуй, займусь тобой...
+
+Пьёт из бокала.
+Ставит бокал на стол.
+Общий план комнаты. Иван сидит за компьютером (мы видим его только до пояса). Рядом с Иваном на столе стоит бутылка, на которой видна надпись «Квас».
+Рядом с компьютерным столом стоит внушительного вида устройство, напоминающее большую механическую руку или клешню. На столе и вокруг стола всё завалено какими-то запчастями, инструментами и деталями. 
+Иван печатает что-то на компьютере, нажимает "Enter" и механическая рука-клешня делает несколько несуразных движений.
+Иван чешет голову и снова печатает.
+На столе рядом с Иваном лежит большой лист бумаги. На листе заглавие "Средство против тараканов", слово "тараканов" зачёркнуто и сверху подписано "агентов". Рядом стоит подпись - "(версия 3.0)". На листе изображена схема: - рука с механическим глазом (вебкамерой) обнаруживает солдата, ловит его и перекладывает на катапульту. 
+Иван, снова берёт бутылку чтобы налить себе в стакан. Из бутылки выливается совсем чуть-чуть жидкости — бутылка пуста.
+
+ИВАН
+(смотрит на бутылку)
+Хм. Похоже, наш «романтический вечер» под угрозой.
+
+Иван вздыхает и встаёт из-за стола. В этот мы видим, что он сидел за столом без штанов - на нём широкие белые трусы в горошек.
+Иван направляется к выходу из комнаты. Перед выходом оглядывается на своё творение.
+
+ИВАН
+Дождись меня, я мигом.
+
+Выходит из комнаты.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КУХНЯ - НОЧЬ #15#
+
+Иван открывает холодильник - там нет кваса, только бутылка молока. Иван разочаровано закрывает дверцу холодильника.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #16#
+
+Иван одевает штаны.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - НОЧЬ #17#
 
 Иван подходит со свечой в руках к двери погреба, отпирает её и заходит внутрь.
 
-.ИНТ. ПОМЕСТЬЕ МОРЕВНЫ ПОГРЕБ НОЧЬ #8#
+# ВОЗРОЖДЕНИЕ КОЩЕЯ
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ #18#
 
 Дверь в погреб со скрипом открывается. Иван спускается по лестнице.
-Ноги Ивана, идущего по погребу.
-Иван озирается по сторонам как будто ищет что-то. В погребе много бочек, бутылок, каких-то продуктов и взрывчатки, отобранной у экстремистов.
+Иван идёт по погребу. Озирается по сторонам как будто ищет что-то. В погребе много бочек, бутылок, каких-то продуктов и взрывчатки, отобранной у солдат.
+
+ИВАН
+(дурачится)
+Ээ-ээй, призраки... Если вы здесь есть, то я вас не боюсь!
+
+Под ноги Ивану подворачивается чёрная кошка. Иван спотыкается об неё.
+
+ИВАН
+(испуганно)
+Аааааа!
+
+Кошка с мяуканием отскакивает в сторону.
+
+ИВАН
+Кыш, пошла!
+
+Налаживает кошке пинка.
+
+ИВАН
+(самому себе)
+У нас что ещё тут кошки есть?..
+
+Иван продолжет идти.
+
+ИВАН
+Так, что у нас тут? Взрывчатка, колбаса, бензин...
+
 Проходит мимо какой-то массивной кованной двери с огромным замком и наконец останавливается возле полки с бутылками.
 
 ИВАН
 Ага... Вот!
 
-Тянет руку к бутылке. Слышен звук булькающей жидкости.
+Тянет руку к бутылке. 
+
+ИВАН
+Ну-ка...
+
+Слышен звук булькающей жидкости.
+
+ИВАН
+(с удовлетворением)
+Вот это квас! Прямо пятизвёздочный квас!
+
+Снова булькающие звуки (Иван пьёт).
 
 КОЩЕЙ
 (из-за двери, замогильным голосом)
@@ -120,27 +331,32 @@
 (чуть боле явственно)
 Помо-о-оги-и-ите-е...
 
-Иван смотрит на замок, потом на связку ключей. Моментальные вспышки на подсознании, показывающие Моревну и Кощея. Они сражаются в каком-то подземелье. Из связки сам собой вываливается нужный ключ.
+Иван смотрит на замок, потом на связку ключей. Из связки сам собой вываливается нужный ключ.
 
 ИВАН
 О-па... запретный ключ!
 (вставляет в замочную скважину)
 Ну-ка, ну-ка...
 
-Приоткрывает дверь и осторожно заглядывает. Опять вспышки. Иван кричит от испуга, неожиданности и удивления.
-В каморке на 12-ти цепях висит КОЩЕЙ (по виду напоминает робота-трансформера). Иван с изумлением оглядывает его.
+Приоткрывает дверь и осторожно заглядывает. Иван кричит от неожиданности и удивления.
 
 ИВАН
-(восхищённо, шёпотом, почти про себя)
-Какой тюнинг...
+Ааааа!
 
-Глаза Кощея открываются, его взгляд пробегает по фигуре Ивана.
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #19#
+
+В каморке на 12-ти цепях висит КОЩЕЙ (по виду напоминает огромного робота-трансформера). Иван с изумлением оглядывает его.
+
+ИВАН
+Клснусь своей бородой!..
+
+Кощей поднимает голову, вертит ею, вглядываемся в темноту.
 
 КОЩЕЙ
-Ты кто такой?
+Кто здесь?
 
 ИВАН
-Я — Иван Царевич.
+Это я... Иван Царевич.
 
 КОЩЕЙ
 Иван Царевич! Как хорошо что ты здесь. Дай мне попить…
@@ -150,31 +366,141 @@
 КОЩЕЙ
 ...бензинчику.
 
-Иван убегает и возвращается с канистрой бензина. Кощей пьёт. Его глаза загораются, он смеётся страшным смехом. Кощей разрывает цепи и встаёт во весь рост, возвышаясь над Иваном.
+ИВАН
+(недоверчиво)
+Э... а ты вообще кто такой...
+
+Голова Кощея опускается вниз.
+
+КОЩЕЙ
+(слабеющим голосом)
+Бензинчику...
+
+ИВАН
+(обеспокоенно)
+Ты, это... Ой, ой... я говорю, ты вообще что такое?
+
+КОЩЕЙ
+(совсем слабым голосом)
+Бензинчику...
+
+ИВАН
+Ну ладно, ладно, ща будет тебе бензинчик.
+
+КОЩЕЙ
+Он где-то тут, за углом.
+
+ИВАН
+Хорошо-хорошо...
+
+Уходит за дверь, но тут же снова выглядывает.
+
+ИВАН
+Ты, это... только не умри тут.
+
+КОЩЕЙ
+(бодро вскидывает голову)
+Я постараюсь.
+(тут же снова безжизненно опускает её вниз)
+
+ИВАН
+Вот и хорошо. Я мигом.
+
+Уходит за дверь.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ #20#
+
+Иван берёт с одной из полок в подвале канистру и возвращается к Кощею. 
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #21#
+
+Иван подставляет лестницу-стремянку (она стояла тут же в комнате где был заперт Кощей) и наливает Кощею в рот бензин.
+Кощей пьёт. Его глаза загораются, он смеётся страшным смехом. 
+
+КОЩЕЙ
+Ха-ха-ха-хаааа!
+
+Кощей разрывает цепи и встаёт во весь рост, возвышаясь над Иваном.
 
 КОЩЕЙ
 Спасибо, Иван царевич. Помог ты мне. Теперь не видать тебе Марьи Моревны. Как своих ушей.
 
-Включает двигатели, трансформируется в летательный аппарат и улетает проломив пару потолочных перегородок и окно.
-Эффект замедлившегося времени: вид снаружи, вылетает Кощей, обломки от выломанного окна разлетаются во все стороны. Затем камера быстро через дыры, проделанные Кощеем возвращается в погреб. Протрезвевший Иван в панике. Он скорее выбегает из погреба, бежит в гараж и садится в машину, едет в погоню.
+Из рук Кощея выдвигаются мощные огнестрельные орудия. Кощей направляет их вверх и делает несколько выстрелов. Выстрелы пробивают потолок и обломки падают вниз, прямо на Ивана.
+Из спины Кощея выдвигаются реактивные двигатели. Двигатели включаются и Кощей улетает через дыру в потолке.
 
-# НА ТРАССЕ
+.НАТ. ТРАССА ВОЗЛЕ ПОМЕСТЬЯ МАРЬИ МОРЕВНЫ - НОЧЬ #22#
 
-.НАТ. ТРАССА НОЧЬ #9#
+Кощей вылетает из поместья Моревны и приземляется прямо посреди автомобильной трассы.
+Вдалеке появляются фары приближающегося грузовика (большой трейлер).
+Кощей загораживает ему дорогу. Подъехав вплотную к Кощею, трейлер гудит и останавливается.
+В трейлере сидит ФЕРМЕР в соломенной шляпе, комбинезоне и рубахе с закатанными рукавами.
+Кощей заглядывает в кабину.
 
-По дороге Иван спешно пытается дозвониться по сотовому Моревне. Абонент временно недоступен.
+КОЩЕЙ
+Привет, дружище! Не подбросишь меня?
+
+ФЕРМЕР
+(тонким голосом, жалобно и испуганно)
+Но я везу курочек!
+
+Кощей стреляет в прицеп, из которого летят перья.
+
+КОЩЕЙ
+Уже нет.
+
+ФЕРМЕР
+Всё понял.
+
+Кощей уезжает верхом на трейлере.
+
+# ИВАН ГОНИТСЯ КОЩЕЕМ
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #23#
+
+Протрезвевший Иван выбирается из под обломков. Выбегает из погреба.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #24#
+
+Иван хватает сотовый телефон и пытается дозвониться до Моревны - "Абонент временно недоступен". Выбегает из комнаты.
+
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ГАРАЖ - НОЧЬ #25#
+
+Иван вбегает в гараж и запрыгивает в машину. Заводит двигатель и выезжает на улицу.
+
+.НАТ. ТРАССА НОЧЬ #26#
+
+Машина Ивана с разгону выскакивает на трассу и едет, закладывая крутые виражи на поворотах. Иван яростно давит педаль газа в пол.
+На горизонте видны клубы дыма, под которыми вырисовываются очертания байкерского клуба. Иван едет прямо к ним.
 
 # УМИРАЮЩИЙ ВОРОБУШЕК
 
-.НАТ. ПОЛЯНА С РАЗБИТЫМ МОТОЦИКЛОМ МОРЕВНЫ НОЧЬ #10#
+.НАТ. ПОЛЯНА ВОЗЛЕ КЛУБА БАЙКЕРОВ - НОЧЬ #27#
 
-Иван видит на дороге разбитый горящий мотоцикл Марьи Моревны, весь в огне. Рядом в землю воткнут меч Моревны, а неподалёку лежит подбитая птичка - ВОРОБУШЕК. Иван резко тормозит, в результате чего его машина идёт юзом и становится перпендикулярно дороге. Иван выскакивает из машины и бежит к мотоциклу, но чем ближе подбегает, тем больше замедляется, в конце концов переходя на шаг. Опускается на колени, берёт Воробушка на руки.
+Возле трассы, посреди поля стоит здание клуба байкеров. Вокруг здания лежат свежие обломки множества мотоциклов. Само здание охвачено огнём.
+Подъезжает машина Ивана, резко тормозит. Иван выскакивает из машины.
+Среди обломков виден разбитый мотоцикл Марьи Моревны, весь в огне. Рядом в землю воткнута катана Моревны.
+
+ИВАН
+О, нет!
+
+Иван стоит некоторое время неподвижно с ужасе смотрит на разрушения.
+Слышатся стоны и из под обломков выкарабкивается человекопообная фигура, это ВОРОБУШЕК - антропоморфное существо с головой птицы, одетое в байкерскую одежду. Воробушек весь обгорелый и с трудом двигается.
+Иван подбегает к Воробушку.
 
 ИВАН
 Что здесь произошло?
 
 ВОРОБУШЕК
-Несчастье! Злой робот-трансформер похитил Марью Моревну. И меня зацепило. Прощай, Иван-Царевич.
+(с трудом шевелит клювом)
+Несчастье! Злой робот-трансформер похитил Марью Моревну. 
+
+ИВАН
+(на фоне)
+Эх!..
+
+ВОРОБУШЕК
+(продолжает)
+...И меня зацепило. Прощай, Иван-Царевич.
 
 Воробушек издыхает.
 
@@ -185,14 +511,59 @@
 (поднимает голову)
 И передай моей семье, что я их всех очень любил.
 
-Иван выдёргивает из земли воткнутую катану Марьи Моревны и убирает её за спину.
+Слышится вой сирен, с разных сторон подъезжают пожарные машины и машины скорой помощи. 
+Поднимается суматоха — пожарные начинают тушить пожар, к Воробушку подбегают врачи. 
+
+ВРАЧ
+В сторону, в сторону! Ему нужен воздух!
+
+МЕДСЕСТРА
+Ну-ка, разошлись все!
+
+Ивана оттесняют в сторону.
+Иван с ужасом озирается по сторонам, пытаясь прийти в себя. Вокруг кричат люди и воют сирены.
+Иван решительно сжимает кулаки, выдёргивает из земли воткнутую катану Марьи Моревны и убирает её за спину.
 
 ИВАН
 (со слезами и тряся кулаком)
 Я передам, обязательно передам! И Марью Моревну я тоже спасу! До свидания!
 
 Иван бежит к машине, садится в нее и уезжает.
-Пока он едет на экране мелькают картинки того, как он по пути заезжал к сёстрам.
-Встреча с первой сестрой. Сестра-доктор выходит с Бизнесменом ему на встречу. Обнимает. Разговаривают. Сестра-доктор убегает за экран и потом пробегает на фоне с аптечкой по направлению к своей машине.
-Встреча с Сестрой-монашкой. Иван сидит за столом, кушает и рассказывает им. Те грустно молчат. Потом Иван вдруг улыбается и говорит что-то насчёт еды. Монашка радуется, прыгает.
-Встреча с Сестрой-механиком. Иван спрашивает их с мужем о чём-то, они думают, но потом сокрушённо качают головой. Рокер открывает перед Иваном чемоданчик. Иван кивает и забирает его.
+Мы видим как один из докторов сколнился над телом Воробушка, который лежит на носилках. Рядом стоит портативный медицинский монитор, который показывает кардиограмму биения сердца Воробушка. Линия кардиограммы прямая - сердце не бьётся.
+
+ДОКТОР
+(сам себе)
+Неужели всё?
+
+За спиной Доктора проходит ПАРЕНЬ В ЧЁРНОМ.
+
+ПАРЕНЬ В ЧЁРНОМ
+(мягко улыбаясь, через плечо)
+Нет-нет. Я просто прохожу мимо...
+
+Кардиограмма на мониторе меняется - появляются удары сердца.
+Воробушек открывает глаза. За спиной Доктора никого нет.
+
+# СЦЕНА ИВАН НАВЕЩАЕТ СЕСТЁР
+
+.НАТ. ДОРОГА #28#
+
+Иван едет на своей машине по трассе. Пока он едет, на экране (вставками/перебивками) мелькают фрагменты, показывающие как он по пути навещает своих сестёр:
+
+.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-ДОКТОРА  #29#
+
+СЕСТРА-ДОКТОР выходит со своим мужем - БИЗНЕСМЕНОМ - ему навстречу. Обнимает. Разговаривают о чём-то.
+
+.ИНТ. ДОМ СЕСТРЫ-МОНАШКИ #30#
+
+Иван сидит за столом, СЕСТРА-МОНАШКА и её муж РЭППЕР сидят рядом. Иван кушает и о чём-то рассказывает им. Те грустно (сочувственно) молчат. 
+Иван вдруг улыбается и указывает на тарелку с едой и что-то говорит Сестре-Монашке, улыюаясь. Сестра-Монашка радуется и прыгает от радости.
+
+.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-МЕХАНИКА #31#
+
+Иван, СЕСТРА-МЕХАНИК и её муж РОКЕР стоят на крыльце дома. Иван спрашивает их о чём-то, они думают, но потом сокрушённо качают головой. 
+Рокер открывает перед Иваном чемоданчик. Иван кивает и забирает его.
+
+.НАТ. ДОРОГА #32#
+
+Иван продолжает ехать по трассе. Уезжает вдаль к горизонту.
