Episode 3: Minor fixes

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -544,7 +544,7 @@
 Кардиограмма на мониторе меняется - появляются удары сердца.
 Воробушек открывает глаза. За спиной Доктора никого нет.
 
-# СЦЕНА ИВАН НАВЕЩАЕТ СЕСТЁР
+# ИВАН НАВЕЩАЕТ СЕСТЁР
 
 .НАТ. ДОРОГА #28#
 
