Episode 3: Reorganize segments

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -268,7 +268,7 @@
 
 Иван подходит со свечой в руках к двери погреба, отпирает её и заходит внутрь.
 
-# ВОЗРОЖДЕНИЕ КОЩЕЯ
+# В ПОДВАЛЕ
 
 .ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ #18#
 
@@ -342,6 +342,8 @@
 
 ИВАН
 Ааааа!
+
+# ВОЗРОЖДЕНИЕ КОЩЕЯ
 
 .ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #19#
 
