Episode 3: Update screenplay (rope and GIB gags)

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,15 +1,15 @@
 
 /*
-Ревизия: 2020.02
+Ревизия: 2020.03
 */
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ - ДЕНЬ #1#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ - ДЕНЬ
 
 Поместье Марьи Моревны представляет собой замок на холме. Вокруг замка растут деревья - что-то типа рощицы. Замок окружён стеной.
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #2#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
 
 СОЛДАТ сидит в зарослях возле стены дома. Рядом с ним стена дома заминирована большим количеством взрывчатки.
 
@@ -42,7 +42,7 @@
 (зло)
 Чтоб тебя... А ничего, что я тут один остался?... Помотрел бы я на вас.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #3#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ
 
 Комната наблюдения, в ней царит полумрак. Посредине стоит стол с множеством мониторов. За столом спиной к нам сидит фигура - МАРЬЯ МОРЕВНА.
 На мониторах видны различные места в замке. На одном из мониторов показан Солдат, а на мониторе рядом видна зелёная звуковая волна, сверху которой стоит надпись "ПЕРЕХВАТ". Звуковая волна колыхается от голоса из штаба (с которым разговаривал Солдат).
@@ -60,7 +60,7 @@
 МАРЬЯ МОРЕВНА
 Там ещё один, возле северной стены. Не вооружён.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ #4#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ
 
 Где-то в поместье Моревны по коридоку стремительно бежит ИВАН.
 
@@ -68,16 +68,16 @@
 (запыхавшись)
 Понял! Направляюсь туда!
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #5#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
 
 Солдат подходит к ящикам со взрывчаткой и дрожащими руками достаёт коробок спичек. Чиркает спичкой о коробок. Спичка загорается.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #6#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ
 
 МАРЬЯ МОРЕВНА
-Тебе придётся поторопиться! Он собирается поджечь шнур!
+Тебе лучше поторопиться! Он собирается поджечь шнур!
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ #7#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - ДЕНЬ
 
 ИВАН
 (на бегу)
@@ -86,30 +86,34 @@
 Не замедляя бега пристёгивает карабин к поясу.
 Иван выпрыгивает в окно.
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #8#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
 
 Солдат подносит спичку к шнуру.
-В это время за его спиной откуда-то сверху на верёвке вниз головой свешивается Иван. Колыхание воздуха от этого движения тушит спичку.
+В это время за его спиной что-то падает сверху и ударяется об землю. Колыхание воздуха от этого движения тушит спичку. Солдат оборачивается.
+За его спиной находится Иван, воткнувшийся головой в землю - он только что упал сверху, верёвка оказалась слишком длинная. Солдат от удивления роняет потухшую спичку.
 
-ИВАН
-Что-то забыл здесь, добрый молодец?
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ
 
-Солдат от неожиданности кричит и вскакивает. Иван в это время отцепляется и становится ногами на землю.
+Моревна фэйспалмит.
+
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
+
+Иван пытается выдернуть голову из земли, совершая смешные движения тазом.
+Наконец, ему это удаётся. Он поднимает голову, сплёвывает комья земли в сторону и рычит от негодования.
+Солдат кричит и выхватывает нож.
 
 СОЛДАТ
 (в панике)
 ААААА! Не подходи, не подходи!
 
-Солдат выхватывает нож. 
-
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ #9#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА НАБЛЮДЕНИЯ - ДЕНЬ
 
 Моревна вскакивает с кресла.
 
 МАРЬЯ МОРЕВНА
 Проклятье, у него нож!
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ #10#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
 
 Не опуская нож, Солдат достаёт другой рукой из нагрудного кармана удостоверение.
 
@@ -122,17 +126,25 @@
 
 # ОТЪЕЗД МОРЕВНЫ
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ #11#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ
 
-Иван выходит из рощи, тащит одной рукой за ногу Солдата. На голове Солдата огромная шишка. У Ивана под одним глазом синяк. Во второй руке Иван несёт ящик с инструментами.
-В самом центре двора стоит угрожающего вида катапульта. Солдат отчаянно скребёт пальцами по земле, но Иван уверенно идёт вперёд, шаг за шагом приближаясь к катапульте.
-Из дверей дома выходит Марья Моревна.
+Иван выходит из рощи, тащит одной рукой за ногу Солдата. На голове Солдата огромная шишка. Во второй руке Иван несёт ящик с инструментами.
+В самом центре двора стоит угрожающего вида катапульта. Иван уверенно тащит Солдата к ней. 
+Солдат поднимает голову и смотрит вперёд. Солдат видит, что на катапульте сидит какая-то странная сгорбленная фигура (ПАРЕНЬ-В-ЧЁРНОМ). Солдат приходит в ужас и начинает сопротивляться - скрести пальцами по земле, пытаясь помешать Ивану тащить его дальше, но Иван уверенно идёт вперёд, шаг за шагом приближаясь к катапульте.
+Иван останавливается возде катапульты и чешет затылок, как будто о чём-то задумашшись. На Парня-в-чёрном он не обращает внимания.
+Солдат с ужасом смотрит на Парня-в-чёрном. Парень-в-чёрном смотрит на Солдата сверху вниз.
+
+ПАРЕНЬ В ЧЁРНОМ
+Привет.
+
+Солдат в ужасе кричит, закатывает глаза и теряет сознание от страха.
+Парень-в-чёрном спрыгивает с катапульты и уходит.
+Иван поворачивается к солдату.
+В этот момент из дверей дома выходит Марья Моревна. Замечает Ивана и Солдата, подходит к ним. Иван в этот момент заканчивает укладывать бессознательное тело Солдата в ковш катапульты.
 
 ИВАН
-(не прекращая идти)
+(оборачивается)
 Ах, Марья Моревна, вот чего я всё в толк не возьму - у нас что тут, мёдом намазано? Вроде и не так уж богато живём, а лезут они к нам и лезут эти голубчики!
-
-Кладёт Солдата на катапульту.
 
 СОЛДАТ
 (очухивается)
@@ -150,14 +162,13 @@
 ИВАН
 Ещё бы не в радость! Но скажи, зачем было сбрасывать ему на голову мой ящик с инструментами?
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ВОСПОМИНАНИЕ - ДЕНЬ #12#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ВОСПОМИНАНИЕ - ДЕНЬ
 
 Анимация в стиле чиби. Солдат стоит с ножом и удостоверением напротив Ивана, а сверху из окна Марья Моревна выбрасывает на голову Солдата ящик с инструментами.
 Ящик падает на голову Солдата, тот падает в отключке.
-Один из инструментов отлетает в сторону Ивана и попадает ему под глаз, оставив синяк.
-Иван яростно трясёт кулаками.
+Иван смотрит на тело солдата и яростно трясёт кулаками.
 
-.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ #13#
+.НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ
 
 МАРЬЯ МОРЕВНА
 Он был с ножом, я испугалась за тебя и бросила тем, что подвернулось под руку.
@@ -177,7 +188,7 @@
 
 ИВАН
 (загибает пальцы на руке)
-Утюг, бюст Ленина, пылесос... А теперь ещё и мой ящик с инструментами! Дорогая, если так пойдёт дальше, то мы останемся совсем без мебели и предметов первой необходимости! Сколько раз я могу тебя убеждать, что я в отличной физической форме и вполне способен нас защитить!
+Пылесос, утюг, табуретка... А теперь ещё и мой ящик с инструментами! Дорогая, если так пойдёт дальше, то мы останемся совсем без мебели и предметов первой необходимости! Сколько раз я могу тебя убеждать, что я в отличной физической форме и вполне способен нас защитить!
 
 МАРЬЯ МОРЕВНА
 (невинно разводит руками)
@@ -228,7 +239,7 @@
 
 # ИВАН В ЗАМКЕ
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #14#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ
 
 Иван наливает из бутылки в бокал какую-то жидкость.
 
@@ -256,21 +267,21 @@
 
 Выходит из комнаты.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КУХНЯ - НОЧЬ #15#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КУХНЯ - НОЧЬ
 
 Иван открывает холодильник - там нет кваса, только бутылка молока. Иван разочаровано закрывает дверцу холодильника.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #16#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ
 
 Иван одевает штаны.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - НОЧЬ #17#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОРИДОР - НОЧЬ
 
 Иван подходит со свечой в руках к двери погреба, отпирает её и заходит внутрь.
 
 # В ПОДВАЛЕ
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ #18#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ
 
 Дверь в погреб со скрипом открывается. Иван спускается по лестнице.
 Иван идёт по погребу. Озирается по сторонам как будто ищет что-то. В погребе много бочек, бутылок, каких-то продуктов и взрывчатки, отобранной у солдат.
@@ -345,7 +356,7 @@
 
 # ВОЗРОЖДЕНИЕ КОЩЕЯ
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #19#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ
 
 В каморке на 12-ти цепях висит КОЩЕЙ (по виду напоминает огромного робота-трансформера). Иван с изумлением оглядывает его.
 
@@ -410,11 +421,11 @@
 
 Уходит за дверь.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ #20#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ПОГРЕБ - НОЧЬ
 
 Иван берёт с одной из полок в подвале канистру и возвращается к Кощею. 
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #21#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ
 
 Иван подставляет лестницу-стремянку (она стояла тут же в комнате где был заперт Кощей) и наливает Кощею в рот бензин.
 Кощей пьёт. Его глаза загораются, он смеётся страшным смехом. 
@@ -430,7 +441,7 @@
 Из рук Кощея выдвигаются мощные огнестрельные орудия. Кощей направляет их вверх и делает несколько выстрелов. Выстрелы пробивают потолок и обломки падают вниз, прямо на Ивана.
 Из спины Кощея выдвигаются реактивные двигатели. Двигатели включаются и Кощей улетает через дыру в потолке.
 
-.НАТ. ТРАССА ВОЗЛЕ ПОМЕСТЬЯ МАРЬИ МОРЕВНЫ - НОЧЬ #22#
+.НАТ. ТРАССА ВОЗЛЕ ПОМЕСТЬЯ МАРЬИ МОРЕВНЫ - НОЧЬ
 
 Кощей вылетает из поместья Моревны и приземляется прямо посреди автомобильной трассы.
 Вдалеке появляются фары приближающегося грузовика (большой трейлер).
@@ -457,26 +468,26 @@
 
 # ИВАН ГОНИТСЯ КОЩЕЕМ
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ #23#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ЗАПРЕТНАЯ КОМНАТА - НОЧЬ
 
 Протрезвевший Иван выбирается из под обломков. Выбегает из погреба.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ #24#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ КОМНАТА - НОЧЬ
 
 Иван хватает сотовый телефон и пытается дозвониться до Моревны - "Абонент временно недоступен". Выбегает из комнаты.
 
-.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ГАРАЖ - НОЧЬ #25#
+.ИНТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ГАРАЖ - НОЧЬ
 
 Иван вбегает в гараж и запрыгивает в машину. Заводит двигатель и выезжает на улицу.
 
-.НАТ. ТРАССА НОЧЬ #26#
+.НАТ. ТРАССА НОЧЬ
 
 Машина Ивана с разгону выскакивает на трассу и едет, закладывая крутые виражи на поворотах. Иван яростно давит педаль газа в пол.
 На горизонте видны клубы дыма, под которыми вырисовываются очертания байкерского клуба. Иван едет прямо к ним.
 
 # УМИРАЮЩИЙ ВОРОБУШЕК
 
-.НАТ. ПОЛЯНА ВОЗЛЕ КЛУБА БАЙКЕРОВ - НОЧЬ #27#
+.НАТ. ПОЛЯНА ВОЗЛЕ КЛУБА БАЙКЕРОВ - НОЧЬ
 
 Возле трассы, посреди поля стоит здание клуба байкеров. Вокруг здания лежат свежие обломки множества мотоциклов. Само здание охвачено огнём.
 Подъезжает машина Ивана, резко тормозит. Иван выскакивает из машины.
@@ -548,24 +559,24 @@
 
 # ИВАН НАВЕЩАЕТ СЕСТЁР
 
-.НАТ. ДОРОГА #28#
+.НАТ. ДОРОГА
 
 Иван едет на своей машине по трассе. Пока он едет, на экране (вставками/перебивками) мелькают фрагменты, показывающие как он по пути навещает своих сестёр:
 
-.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-ДОКТОРА  #29#
+.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-ДОКТОРА 
 
 СЕСТРА-ДОКТОР выходит со своим мужем - БИЗНЕСМЕНОМ - ему навстречу. Обнимает. Разговаривают о чём-то.
 
-.ИНТ. ДОМ СЕСТРЫ-МОНАШКИ #30#
+.ИНТ. ДОМ СЕСТРЫ-МОНАШКИ
 
 Иван сидит за столом, СЕСТРА-МОНАШКА и её муж РЭППЕР сидят рядом. Иван кушает и о чём-то рассказывает им. Те грустно (сочувственно) молчат. 
 Иван вдруг улыбается и указывает на тарелку с едой и что-то говорит Сестре-Монашке, улыюаясь. Сестра-Монашка радуется и прыгает от радости.
 
-.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-МЕХАНИКА #31#
+.НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-МЕХАНИКА
 
 Иван, СЕСТРА-МЕХАНИК и её муж РОКЕР стоят на крыльце дома. Иван спрашивает их о чём-то, они думают, но потом сокрушённо качают головой. 
 Рокер открывает перед Иваном чемоданчик. Иван кивает и забирает его.
 
-.НАТ. ДОРОГА #32#
+.НАТ. ДОРОГА
 
 Иван продолжает ехать по трассе. Уезжает вдаль к горизонту.
