--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,6 +1,6 @@
 
 /*
-Ревизия: 2020.03
+Ревизия: 2020.04
 */
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
@@ -12,6 +12,12 @@
 .НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ РОЩА - ДЕНЬ
 
 СОЛДАТ сидит в зарослях возле стены дома. Рядом с ним стена дома заминирована большим количеством взрывчатки.
+
+СОЛДАТ
+(потирает руки)
+Хе-хе-хе...
+
+Достаёт рацию.
 
 СОЛДАТ
 (в рацию)
@@ -169,30 +175,6 @@
 Иван смотрит на тело солдата и яростно трясёт кулаками.
 
 .НАТ. ПОМЕСТЬЕ МАРЬИ МОРЕВНЫ ДВОР - ДЕНЬ
-
-МАРЬЯ МОРЕВНА
-Он был с ножом, я испугалась за тебя и бросила тем, что подвернулось под руку.
-
-ИВАН
-Да-да, этот - с ножом, предыдущий был с рогаткой и ты бросила в него пылесосом...
-
-МАРЬЯ МОРЕВНА
-(на фоне)
-Опасное оружие!
-
-ИВАН
-(продолжает)
-...А до этого был один с палкой и другой с теннисной ракеткой.
-
-Показывается изображение солдата, одетого в теннисные шорты и футболку. И то, и другое одето прямо поверх солдатской формы. Рядом с солдатом появляется стрелочка и надпись: "Переоделся теннисистом".
-
-ИВАН
-(загибает пальцы на руке)
-Пылесос, утюг, табуретка... А теперь ещё и мой ящик с инструментами! Дорогая, если так пойдёт дальше, то мы останемся совсем без мебели и предметов первой необходимости! Сколько раз я могу тебя убеждать, что я в отличной физической форме и вполне способен нас защитить!
-
-МАРЬЯ МОРЕВНА
-(невинно разводит руками)
-Ну прости, прости...
 
 ИВАН
 И что ты им такого сделала, что они так хотят до тебя добраться?
