Episode 3: Typo and minor dialogue update

--- a/2-episodes/morevna-episode-3-ru.fountain
+++ b/2-episodes/morevna-episode-3-ru.fountain
@@ -1,6 +1,6 @@
 
 /*
-Ревизия: 2020.04
+Ревизия: 2020.05
 */
 
 # ДИВЕРСИЯ НА ЗАМОК МОРЕВНЫ
@@ -27,7 +27,7 @@
 
 ГОЛОС ИЗ РАЦИИ
 (отчаянно и истерично)
-Эй, эй!!! Отпусти!... Нет!
+Эй, эй!!! Отпусти меня!... Нет!
 
 Слышится треск кустов и сучьев. Из-за деревьев, прямо в небо с воплем вылетает чьё-то тело, подброшенное в воздух неведомой силой. Тело улетает далеко за стену замка.
 Солдат с ужасом провожает взглядом пролетевшее по небу тело.
@@ -552,7 +552,7 @@
 .ИНТ. ДОМ СЕСТРЫ-МОНАШКИ
 
 Иван сидит за столом, СЕСТРА-МОНАШКА и её муж РЭППЕР сидят рядом. Иван кушает и о чём-то рассказывает им. Те грустно (сочувственно) молчат. 
-Иван вдруг улыбается и указывает на тарелку с едой и что-то говорит Сестре-Монашке, улыюаясь. Сестра-Монашка радуется и прыгает от радости.
+Иван вдруг улыбается и указывает на тарелку с едой и что-то говорит Сестре-Монашке, улыбаясь. Сестра-Монашка радуется и прыгает от радости.
 
 .НАТ. ВОЗЛЕ ДОМА СЕСТРЫ-МЕХАНИКА
 
